--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,27 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
+  --font-bitcount: var(--font-bitcount-single);
   --font-mono: var(--font-geist-mono);
+  --secondary-color: var(--color-neutral-700);
+  --primary-color: var(--color-black);
+  --primary-hover-color: var(--color-neutral-400);
+  --primary-active-color: var(--color-neutral-700);
+  --shadow-color: #222;
+  --active-color: var(--color-pink-500);
+  --active-secondary-color: var(--color-pink-700);
+
+  /*button*/
+  --shine-degree: 120deg;
+  --shine-color: var(--color-white);
+  --shine-effect: linear-gradient(
+    var(--shine-degree),
+    transparent,
+    var(--shine-color),
+    transparent
+  );
+  --shine-transition: all 1s ease-in-out;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,4 +35,139 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  position: relative;
+}
+
+.form-group input {
+  border: 1px solid var(--secondary-color);
+  border-radius: 1rem;
+  padding: 1rem;
+  width: 100%;
+  transition: all 150ms ease-out;
+}
+
+.form-group input:focus-visible {
+  outline: none;
+  border: 3px solid var(--active-color);
+}
+
+.form-group:first-child {
+  margin-top: 1.5rem;
+}
+
+.form-group:not(:first-child) {
+  margin-top: 3rem;
+}
+
+.form-group label {
+  font-size: 1.5rem;
+  position: absolute;
+  left: 15px;
+  top: 11px;
+  z-index: 10;
+  transition: transform 150ms ease-out, font-size 150ms ease-out;
+}
+
+.form-group label.focused  {
+  transform: translateY(-170%);
+  font-size: 1rem
+}
+
+.glass-card {
+  border: 1px solid var(--secondary-color);
+  padding: 2rem;
+  border-radius: 1rem;
+}
+
+.login {
+  min-width: 40%;
+  height: 35rem;
+  /* max-height: 70%; */
+}
+
+.primary-btn {
+  border: 1px solid var(--secondary-color);
+  padding: 0.6rem;
+  border-radius: 1rem;
+  font-size: 1.5rem;
+  background: var(--foreground);
+  color: var(--primary-color);
+  transition: background 150ms ease-out;
+}
+
+.primary-btn:hover {
+  background: var(--primary-hover-color);
+}
+
+.primary-btn:active {
+  background: var(--primary-active-color);
+}
+
+.neo-pop-btn {
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  background: var(--foreground);
+  color: var(--primary-color);
+  font-weight: 600;
+  font-size: 1.5rem;
+  padding: 0.6rem 1.5rem;
+  border: 3px solid var(--shadow-color);
+  border-radius: 1rem;
+  cursor: pointer;
+  text-transform: uppercase;
+  box-shadow: 6px 6px 0 var(--shadow-color);
+  transition: all 0.15s ease;
+}
+
+.neo-pop-btn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--shine-effect);
+  left: -100%;
+  transition: var(--shine-transition);
+}
+
+.neo-pop-btn:hover {
+  background: var(--active-color);
+  transform: translate(-3px, -3px);
+  box-shadow: 9px 9px 0 var(--shadow-color);
+}
+
+.neo-pop-btn:hover::before {
+  left: 100%
+}
+
+.neo-pop-btn:active {
+  background: var(--active-secondary-color);
+  transform: translate(3px, 3px);
+  box-shadow: 3px 3px 0 var(--shadow-color);
+}
+
+.brand-link {
+  color: var(--color-white);
+  text-decoration: underline;
+  transition: all 0.15s ease;
+}
+
+.brand-link:hover {
+  color: var(--active-color);
+  text-decoration: underline;
+}
+
+.brand-link:active {
+  color: var(--active-secondary-color);
+  text-decoration: underline;
 }
