--- a/app/globals.css
+++ b/app/globals.css
@@ -21,7 +21,7 @@
     var(--shine-color),
     transparent
   );
-  --shine-transition: all 1s ease-in-out;
+  --shine-transition: all 500ms ease-in-out;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -55,6 +55,22 @@ body {
   transition: all 150ms ease-out;
 }
 
+.form-group.otp {
+  flex-direction: row;
+  box-sizing: content-box;
+}
+
+.form-group.otp input {
+  border: 1px solid var(--secondary-color);
+  border-radius: 1rem;
+  padding: 1.5rem;
+  width: 100%;
+  transition: all 150ms ease-out;
+  width: 70px;
+  height: 70px;
+  font-size: 1.5rem;
+}
+
 .form-group input:focus-visible {
   outline: none;
   border: 3px solid var(--active-color);
@@ -69,17 +85,50 @@ body {
 }
 
 .form-group label {
-  font-size: 1.5rem;
+  /* font-size: 1.5rem; */
   position: absolute;
   left: 15px;
-  top: 11px;
+  top: 50%;
+  transform: translateY(-50%);
   z-index: 10;
   transition: transform 150ms ease-out, font-size 150ms ease-out;
 }
 
 .form-group label.focused  {
-  transform: translateY(-170%);
+  transform: translateY(-250%);
   font-size: 1rem
+}
+
+.form-group.error input {
+  border: 1px solid var(--color-red-600);
+  background-color: rgba(185, 28, 28, 0.1);
+  animation: shake 0.2s ease-in-out 0s 2;
+}
+.form-group.error label {
+  animation: shake 0.2s ease-in-out 0s 2;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
+
+@keyframes shake {
+  0% {
+    margin-left: 0rem;
+  }
+  25% {
+    margin-left: 0.5rem;
+  }
+  75% {
+    margin-left: -0.5rem;
+  }
+  100% {
+    margin-left: 0rem;
+  }
 }
 
 .glass-card {
@@ -170,4 +219,36 @@ body {
 .brand-link:active {
   color: var(--active-secondary-color);
   text-decoration: underline;
+}
+
+::view-transition-new(.error-text) {
+  animation: slide-in 150ms ease-in 0s 1;
+}
+
+@keyframes slide-in {
+  from {
+    opacity: 0;
+    transform: translateX(-5%);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+}
+
+::view-transition-new(.error-hide) {
+  animation: slide-out 1s ease-in 0s 1;
+}
+
+@keyframes slide-out {
+  from {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+
+  to {
+    opacity: 0;
+    transform: translateX(-5%);
+  }
 }
