--- a/app/globals.css
+++ b/app/globals.css
@@ -69,6 +69,57 @@ body {
   width: 70px;
   height: 70px;
   font-size: 1.5rem;
+  text-align: center;
+}
+
+@media (max-width: 1360px) {
+  .form-group.otp input {
+    padding: 1rem;
+    width: 60px;
+    height: 60px;
+  }
+}
+
+@media (max-width: 1240px) {
+  .form-group.otp input {
+    padding: 0.8rem;
+    width: 50px;
+    height: 50px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .form-group.otp input {
+    padding: 1.5rem;
+    width: 70px;
+    height: 70px;
+  }
+}
+
+@media (max-width: 660px) {
+  .form-group.otp input {
+    padding: 0.8rem;
+    width: 50px;
+    height: 50px;
+    font-size: 1rem;
+  }
+}
+
+@media (max-width: 520px) {
+  .form-group.otp input {
+    padding: 0.2rem;
+    width: 40px;
+    height: 40px;
+  }
+}
+
+@media (max-width: 450px) {
+  .form-group.otp input {
+    padding: 0.1rem;
+    width: 20px;
+    height: 20px;
+    font-size: 1rem;
+  }
 }
 
 .form-group input:focus-visible {
@@ -159,50 +210,6 @@ input[type=number]::-webkit-outer-spin-button {
 
 .primary-btn:active {
   background: var(--primary-active-color);
-}
-
-.neo-pop-btn {
-  position: relative;
-  display: inline-block;
-  overflow: hidden;
-  background: var(--foreground);
-  color: var(--primary-color);
-  font-weight: 600;
-  font-size: 1.5rem;
-  padding: 0.6rem 1.5rem;
-  border: 3px solid var(--shadow-color);
-  border-radius: 1rem;
-  cursor: pointer;
-  text-transform: uppercase;
-  box-shadow: 6px 6px 0 var(--shadow-color);
-  transition: all 0.15s ease;
-}
-
-.neo-pop-btn::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: var(--shine-effect);
-  left: -100%;
-  transition: var(--shine-transition);
-}
-
-.neo-pop-btn:hover {
-  background: var(--active-color);
-  transform: translate(-3px, -3px);
-  box-shadow: 9px 9px 0 var(--shadow-color);
-}
-
-.neo-pop-btn:hover::before {
-  left: 100%
-}
-
-.neo-pop-btn:active {
-  background: var(--active-secondary-color);
-  transform: translate(3px, 3px);
-  box-shadow: 3px 3px 0 var(--shadow-color);
 }
 
 .brand-link {
